<?xml version="1.0" encoding="utf-8"?>
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent">
    <LinearLayout 
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    >
      <ImageView 
        android:id="@+id/film_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/film_image"
        android:adjustViewBounds="true"
      />
      <View
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="#B45F04" 
      />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:id="@+id/film_title"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
      />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/genre"
          android:textStyle="bold"
          android:paddingRight="5dp"
        />
        <TextView
          android:id="@+id/film_genre"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        />
      </LinearLayout>
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/duration"
          android:textStyle="bold"
          android:paddingRight="5dp"
        />
        <TextView
          android:id="@+id/film_duration"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        />
      </LinearLayout>
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tecnology"
          android:textStyle="bold"
          android:paddingRight="5dp"
        />
        <TextView
          android:id="@+id/film_tecnology"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        />
      </LinearLayout>
      <LinearLayout
        android:id="@+id/director_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/director"
          android:textStyle="bold"
          android:paddingRight="5dp"
        />
        <TextView
          android:id="@+id/film_director"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        />
      </LinearLayout>
      <LinearLayout
        android:id="@+id/cast_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cast"
          android:textStyle="bold"
          android:paddingRight="5dp"
        />
        <TextView
          android:id="@+id/film_cast"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        />
      </LinearLayout>
      <LinearLayout
        android:id="@+id/year_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/year"
          android:textStyle="bold"
          android:paddingRight="5dp"
        />
        <TextView
          android:id="@+id/film_year"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        />
      </LinearLayout>
      <LinearLayout
        android:id="@+id/nation_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/nation"
          android:textStyle="bold"
          android:paddingRight="5dp"
        />
        <TextView
          android:id="@+id/film_nation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        />
      </LinearLayout>
      <TextView
        android:id="@+id/film_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
      />
    </LinearLayout>
  </ScrollView>
